MIX_BACKGROUNDS in header

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <title>Select files for morphing</title>
 <body>
-<h1>Select files for morphing</h1>
+<h1>Select files for morphing mix_backgrounds={{ mix_backgrounds }} </h1>
 <form method=post enctype=multipart/form-data>
     <div>
         <h4>Select I/Friend files (names with code):</h4>
